Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
 variables:
   tag: 'whatever.$(Build.BuildId)'
   RAMP_UP: '1'
-  DARATION: '60'
+  DURATION: '60'
   VUSERS: '10'
 
 stages:
